--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
   <a class="navbar-brand" routerLink="home" routerLinkActive="active"><b><i>LaptopShop</i></b></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample" aria-controls="navbarsExample" aria-expanded="false" aria-label="Toggle navigation">
   
@@ -14,13 +14,10 @@
   <a class="nav-link" *ngIf="loginbtn" routerLink="login" routerLinkActive="active">Login</a>
   </li>
   <li class="nav-item">
-  <button type="button" *ngIf="logoutbtn" class="btn btn-block" (click)="logout()">logout</button>
+  <button type="button" *ngIf="logoutbtn" class="btn btn-block text-light" (click)="logout()">Logout</button>
   </li>
   <li class="nav-item">
   <a class="nav-link" *ngIf="loginbtn" routerLink="registration" routerLinkActive="active">Registration</a>
-  </li>
-  <li class="nav-item">
-  <a class="nav-link" *ngIf="logoutbtn" routerLink="dashboard" routerLinkActive="active">Dashboard</a>
   </li>
   </ul>
   </div>
