--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-<h2 class="text-center">Login</h2>
+<br><br>
+<h1 class="text-center text-primary">Login</h1><br>
 <div class="row">
 <div class="col-md-4">
 </div>
@@ -6,14 +7,16 @@
 <div class="jumbotron">
 <form [formGroup]="angForm" (ngSubmit)="postdata(angForm)" autocomplete="off" >
 <div class="form-group">
-<label for="email">Email</label>
+<label for="email"><b>Email</b></label>
 <input type="email" name="email" formControlName="email" autocomplete="off" class="form-control input-sm" placeholder="Email">
-</div>
+</div><br>
 <div class="form-group">
-<label for="Password">Password</label>
+<label for="Password"><b>Password</b></label>
 <input type="password" name="Password" formControlName="password" autocomplete="off" class="form-control input-sm" placeholder="Password">
+</div><br>
+<div style="text-align: center;">
+<button type="submit" class="btn btn-primary" >Login</button>
 </div>
-<button type="submit" class="btn btn-success" >Login</button>
 </form>
 </div>
 </div>
